welcome.lessons.welcome.array.arrayfront9.ArrayFront9.scala.code
def arrayFront9(nums:Array[Int]): Boolean = {
  var k = 0
  var L :Int = nums.length
  for (j <- 0 to 3) {
    if (nums(j)==9) {
      k= k+1
    	}
  	}
  if (k>= 0){
  return true
}
}
    
  